---
source: crates/ruff/src/rules/flake8_pytest_style/mod.rs
expression: diagnostics
---
- kind:
    name: RaisesTooBroad
    body: "`pytest.raises(ValueError)` is too broad, set the `match` parameter or use a more specific exception"
    commit: ~
    fixable: false
  location:
    row: 17
    column: 23
  end_location:
    row: 17
    column: 33
  fix: ~
  parent: ~
- kind:
    name: RaisesTooBroad
    body: "`pytest.raises(socket.error)` is too broad, set the `match` parameter or use a more specific exception"
    commit: ~
    fixable: false
  location:
    row: 20
    column: 23
  end_location:
    row: 20
    column: 35
  fix: ~
  parent: ~
- kind:
    name: RaisesTooBroad
    body: "`pytest.raises(ValueError)` is too broad, set the `match` parameter or use a more specific exception"
    commit: ~
    fixable: false
  location:
    row: 25
    column: 23
  end_location:
    row: 25
    column: 33
  fix: ~
  parent: ~
- kind:
    name: RaisesTooBroad
    body: "`pytest.raises(ValueError)` is too broad, set the `match` parameter or use a more specific exception"
    commit: ~
    fixable: false
  location:
    row: 28
    column: 23
  end_location:
    row: 28
    column: 33
  fix: ~
  parent: ~
- kind:
    name: RaisesTooBroad
    body: "`pytest.raises(ValueError)` is too broad, set the `match` parameter or use a more specific exception"
    commit: ~
    fixable: false
  location:
    row: 31
    column: 23
  end_location:
    row: 31
    column: 33
  fix: ~
  parent: ~

